# Analyza_signalu2

./: README.md
ukoly/ukol1/: HRV_slider.py  ecg.mat  filtering.py  pyproject.toml
ukoly/ukol2/: README.md  main.py  pyproject.toml  zkouska.py
ukoly/ukol3/: klasifikace.py  main.py  pyproject.toml
ukoly/ukol5/: Analyza_signalov_II_neuronove_site_Marek.docx  numbers.ipynb
zkouska/: biosignal.md  eeg.md  ekg.md  kognitivni systemy a neurovedy.md  ktg.md  pokrocile algoritmy AI.md  uvod do teorie neuronovych siti.md
